--- a/camunda-pizza-process/pom.xml
+++ b/camunda-pizza-process/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>h2</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.8.11.6</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.12</version>
@@ -57,6 +62,31 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>cz.habarta.typescript-generator</groupId>
+                <artifactId>typescript-generator-maven-plugin</artifactId>
+                <version>2.21.588</version>
+                <executions>
+                    <execution>
+                        <id>generate</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <phase>process-classes</phase>
+                    </execution>
+                </executions>
+                <configuration>
+                    <jsonLibrary>jackson2</jsonLibrary>
+                    <outputFileType>implementationFile</outputFileType>
+                    <classes>
+                        <class>pl.agawrysiuk.model.DeliveryAddress</class>
+                        <class>pl.agawrysiuk.model.Pizza</class>
+                        <class>pl.agawrysiuk.camunda.dto.CamundaVariables</class>
+                    </classes>
+                    <outputKind>module</outputKind>
+                    <outputFile>../pizza-order-frontend/src/model/dto.ts</outputFile>
+                </configuration>
             </plugin>
         </plugins>
     </build>
