--- a/pizza-database/src/main/resources/application.properties
+++ b/pizza-database/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=none
+
+spring.flyway.url=jdbc:h2:mem:testdb
+
 server.port=8090
