Created controller, service and repository for Conversation

--- a/pizza-database/src/main/resources/application.properties
+++ b/pizza-database/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.datasource.password=admin
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=none
 
+spring.h2.console.enabled=true
+
 spring.flyway.url=jdbc:h2:mem:testdb
+spring.flyway.user=admin
+spring.flyway.password=admin
 
 server.port=8090
