--- a/pizza-database/pom.xml
+++ b/pizza-database/pom.xml
@@ -61,6 +61,30 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>cz.habarta.typescript-generator</groupId>
+				<artifactId>typescript-generator-maven-plugin</artifactId>
+				<version>2.21.588</version>
+				<executions>
+					<execution>
+						<id>generate</id>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<phase>process-classes</phase>
+					</execution>
+				</executions>
+				<configuration>
+					<jsonLibrary>jackson2</jsonLibrary>
+					<outputFileType>implementationFile</outputFileType>
+					<classes>
+						<class>pl.agawrysiuk.pizzadatabase.model.Conversation</class>
+					</classes>
+					<outputKind>module</outputKind>
+					<mapEnum>asEnum</mapEnum>
+					<outputFile>../pizza-order-frontend/src/model/database-dto.ts</outputFile>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
