--- a/pizza-camunda-process/pom.xml
+++ b/pizza-camunda-process/pom.xml
@@ -27,6 +27,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>pl.agawrysiuk</groupId>
+            <artifactId>pizza-shared-dtos</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.camunda.bpm.springboot</groupId>
             <artifactId>camunda-bpm-spring-boot-starter-webapp</artifactId>
             <version>3.4.0</version>
@@ -53,7 +58,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.9.10.3</version>
+            <version>2.9.10.4</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
