--- a/pizza-shared-dtos/pom.xml
+++ b/pizza-shared-dtos/pom.xml
@@ -38,6 +38,10 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -60,7 +64,7 @@
 					<outputFileType>implementationFile</outputFileType>
 					<classes>
 						<class>pl.agawrysiuk.pizzashareddtos.model.Conversation</class>
-						<class>pl.agawrysiuk.pizzashareddtos.model.DeliveryAddress</class>
+						<class>pl.agawrysiuk.pizzashareddtos.dtos.DeliveryAddress</class>
 						<class>pl.agawrysiuk.pizzashareddtos.model.Pizza</class>
 						<class>pl.agawrysiuk.pizzashareddtos.camunda.dtos.CamundaVariables</class>
 						<class>pl.agawrysiuk.pizzashareddtos.camunda.dtos.Task</class>
