--- a/pizza-shared-dtos/pom.xml
+++ b/pizza-shared-dtos/pom.xml
@@ -66,6 +66,7 @@
 						<class>pl.agawrysiuk.pizzashareddtos.model.Conversation</class>
 						<class>pl.agawrysiuk.pizzashareddtos.dtos.DeliveryAddress</class>
 						<class>pl.agawrysiuk.pizzashareddtos.dtos.PizzaDataDto</class>
+						<class>pl.agawrysiuk.pizzashareddtos.dtos.LiteralDto</class>
 						<class>pl.agawrysiuk.pizzashareddtos.model.Pizza</class>
 						<class>pl.agawrysiuk.pizzashareddtos.camunda.dtos.CamundaVariables</class>
 						<class>pl.agawrysiuk.pizzashareddtos.camunda.dtos.Task</class>
