--- a/pizza-shared-dtos/pom.xml
+++ b/pizza-shared-dtos/pom.xml
@@ -63,6 +63,7 @@
 					<jsonLibrary>jackson2</jsonLibrary>
 					<outputFileType>implementationFile</outputFileType>
 					<classes>
+						<class>pl.agawrysiuk.pizzashareddtos.Step</class>
 						<class>pl.agawrysiuk.pizzashareddtos.model.Conversation</class>
 						<class>pl.agawrysiuk.pizzashareddtos.dtos.DeliveryAddress</class>
 						<class>pl.agawrysiuk.pizzashareddtos.dtos.PizzaDataDto</class>
