--- a/pizza-shared-dtos/pom.xml
+++ b/pizza-shared-dtos/pom.xml
@@ -42,6 +42,11 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
